@@ -2,6 +2,8 @@ Routes Changelog
 ========================
 
 -- 1.7.0 (**svn**)
+* Fixed url_for (thus redirect_to) to throw an exception if a Unicode
+  string is returned as that's an invalid URL. Fixes #46.
 * Fixed Routes middleware to only parse POST's if the content type is
   application/x-www-form-urlencoded for a HTML form. This properly avoids
   parsing wsgi.input when it doesn't need to be.
